--- a/index.html
+++ b/index.html
@@ -7090,32 +7090,32 @@ function initTaskManager() {
   win.querySelector('.window-fullscreen-toggle').addEventListener('click', () => win.classList.toggle('fullscreen'));
 }
 
+function initWidgetsSystem(currentUser) {
+  const widgetLayer = document.getElementById('desktop-widgets-layer') || createWidgetLayer();
 
-
-function initWidgetsSystem() {
-  // Create widget layer
-  let widgetLayer = document.getElementById('desktop-widgets-layer');
-  if (!widgetLayer) {
-    widgetLayer = document.createElement('div');
-    widgetLayer.id = 'desktop-widgets-layer';
-    widgetLayer.style.position = 'absolute';
-    widgetLayer.style.inset = '0';
-    widgetLayer.style.zIndex = '1000';
-    document.body.appendChild(widgetLayer);
-  }
-
-  // Load saved widgets
-  const savedWidgets = JSON.parse(localStorage.getItem('widgets') || '[]');
+  // Load saved widgets for current user
+  const userKey = `widgets_${currentUser}`;
+  const savedWidgets = JSON.parse(localStorage.getItem(userKey) || '[]');
   savedWidgets.forEach(widget => createWidget(widget.type, widget.x, widget.y, widget.content));
 
-  // Function to create a widget
+  function createWidgetLayer() {
+    const layer = document.createElement('div');
+    layer.id = 'desktop-widgets-layer';
+    layer.style.position = 'absolute';
+    layer.style.inset = '0';
+    layer.style.zIndex = '1000';
+    document.body.appendChild(layer);
+    return layer;
+  }
+
+  // Create widget
   function createWidget(type, x = 50, y = 50, content = '') {
     const widgetEl = document.createElement('div');
     widgetEl.className = 'desktop-widget';
     widgetEl.style.position = 'absolute';
     widgetEl.style.left = `${x}px`;
     widgetEl.style.top = `${y}px`;
-    widgetEl.style.width = '200px';
+    widgetEl.style.width = '220px';
     widgetEl.style.background = 'rgba(10,10,30,0.9)';
     widgetEl.style.borderRadius = '8px';
     widgetEl.style.boxShadow = '0 4px 12px rgba(0,0,0,0.4)';
@@ -7124,7 +7124,7 @@ function initWidgetsSystem() {
     widgetEl.style.padding = '8px';
     widgetEl.style.cursor = 'move';
 
-    // Header with controls
+    // Header
     const header = document.createElement('div');
     header.style.display = 'flex';
     header.style.justifyContent = 'space-between';
@@ -7154,45 +7154,53 @@ function initWidgetsSystem() {
     header.appendChild(controls);
     widgetEl.appendChild(header);
 
-    // Body content
+    // Body
     const body = document.createElement('div');
     body.className = 'widget-body';
 
     if (type === 'Clock') {
       body.innerHTML = `<div id="clock-${Date.now()}">--:--</div>`;
-      setInterval(() => {
-        const now = new Date();
-        body.querySelector('div').textContent = now.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
-      }, 1000);
     } else if (type === 'Notes') {
-      body.innerHTML = `<textarea style="width:100%;height:80px;background:#111;color:#fff;border:none;border-radius:4px;">${content}</textarea>`;
-    } else if (type === 'Weather') {
-      body.innerHTML = `<div>Weather: Sunny 25°C</div>`;
-    } else {
-      body.innerHTML = `<div>${content || 'Custom Widget'}</div>`;
+      body.innerHTML = `<textarea style="width:100%;height:80px;background:#111;color:#fff;border:none;border-radius:4px;">${content}</textarea>
+      <button style="margin-top:6px;width:100%;background:#ff7ad9;border:none;color:#fff;padding:4px;border-radius:4px;">Save</button>`;
+    } else if (type === 'Calendar') {
+      const now = new Date();
+      body.innerHTML = `<div><strong>${now.toDateString()}</strong></div><div style="display:grid;grid-template-columns:repeat(7,1fr);gap:4px;margin-top:6px;">${Array.from({length:30},(_,i)=>`<div>${i+1}</div>`).join('')}</div>`;
+    } else if (type === 'Calculator') {
+      body.innerHTML = `<input type="text" readonly style="width:100%;margin-bottom:6px;background:#222;color:#fff;border:none;padding:4px;border-radius:4px;">
+      <div style="display:grid;grid-template-columns:repeat(4,1fr);gap:4px;">${['7','8','9','/','4','5','6','*','1','2','3','-','0','.','=','+'].map(d=>`<button>${d}</button>`).join('')}</div>`;
+    } else if (type === 'MiniWeb') {
+      body.innerHTML = `<input type="text" placeholder="Enter URL" style="width:100%;margin-bottom:6px;background:#222;color:#fff;border:none;padding:4px;border-radius:4px;">
+      <iframe style="width:100%;height:120px;background:#fff;border:none;"></iframe>`;
+    } else if (type === 'MiniRun') {
+      body.innerHTML = `<input type="text" placeholder="Enter app name" style="width:100%;margin-bottom:6px;background:#222;color:#fff;border:none;padding:4px;border-radius:4px;">
+      <button style="width:100%;background:#ff7ad9;border:none;color:#fff;padding:4px;border-radius:4px;">Run</button>`;
+    } else if (type === 'MiniCPU') {
+      body.innerHTML = `<canvas width="200" height="80" style="background:#111;border-radius:4px;"></canvas>`;
+    } else if (type === 'Custom') {
+      body.innerHTML = `<textarea placeholder="Enter HTML" style="width:100%;height:60px;background:#111;color:#fff;border:none;border-radius:4px;"></textarea>
+      <textarea placeholder="Enter JS" style="width:100%;height:60px;background:#111;color:#fff;border:none;border-radius:4px;margin-top:6px;"></textarea>
+      <button style="margin-top:6px;width:100%;background:#ff7ad9;border:none;color:#fff;padding:4px;border-radius:4px;">Create</button>`;
     }
 
     widgetEl.appendChild(body);
     widgetLayer.appendChild(widgetEl);
 
-    // Save widget state
     saveWidget(type, x, y, content);
 
-    // Remove widget
+    // Controls
     closeBtn.addEventListener('click', () => {
       widgetEl.remove();
       removeWidget(type, x, y);
     });
-
-    // Minimize widget
     minimizeBtn.addEventListener('click', () => {
       body.style.display = body.style.display === 'none' ? 'block' : 'none';
     });
 
-    // Drag functionality
+    // Dragging
     let isDragging = false, offsetX, offsetY;
     widgetEl.addEventListener('mousedown', e => {
-      if (e.target.tagName === 'TEXTAREA') return; // Don't drag when editing notes
+      if (e.target.tagName === 'TEXTAREA' || e.target.tagName === 'INPUT') return;
       isDragging = true;
       offsetX = e.clientX - widgetEl.offsetLeft;
       offsetY = e.clientY - widgetEl.offsetTop;
@@ -7212,35 +7220,64 @@ function initWidgetsSystem() {
     });
   }
 
-  // Save widget state to localStorage
+  // Save widget state
   function saveWidget(type, x, y, content) {
-    const widgets = JSON.parse(localStorage.getItem('widgets') || '[]');
+    const widgets = JSON.parse(localStorage.getItem(userKey) || '[]');
     const existingIndex = widgets.findIndex(w => w.type === type && w.x === x && w.y === y);
     if (existingIndex >= 0) {
       widgets[existingIndex] = { type, x, y, content };
     } else {
       widgets.push({ type, x, y, content });
     }
-    localStorage.setItem('widgets', JSON.stringify(widgets));
+    localStorage.setItem(userKey, JSON.stringify(widgets));
   }
 
-  // Remove widget from localStorage
   function removeWidget(type, x, y) {
-    let widgets = JSON.parse(localStorage.getItem('widgets') || '[]');
+    let widgets = JSON.parse(localStorage.getItem(userKey) || '[]');
     widgets = widgets.filter(w => !(w.type === type && w.x === x && w.y === y));
-    localStorage.setItem('widgets', JSON.stringify(widgets));
+    localStorage.setItem(userKey, JSON.stringify(widgets));
   }
 
-  // Public API to add new widget
+  // Update widgets every 3 seconds
+  setInterval(() => {
+    document.querySelectorAll('.desktop-widget').forEach(widget => {
+      const type = widget.querySelector('strong').textContent;
+      if (type === 'Clock') {
+        const clockEl = widget.querySelector('.widget-body div');
+        clockEl.textContent = new Date().toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
+      } else if (type === 'MiniCPU') {
+        const canvas = widget.querySelector('canvas');
+        const ctx = canvas.getContext('2d');
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
+        ctx.strokeStyle = '#ff7ad9';
+        ctx.beginPath();
+        for (let i = 0; i < 10; i++) {
+          const x = i * 20;
+          const y = Math.random() * canvas.height;
+          if (i === 0) ctx.moveTo(x, y);
+          else ctx.lineTo(x, y);
+        }
+        ctx.stroke();
+        ctx.fillStyle = '#fff';
+        ctx.font = '12px sans-serif';
+        ctx.fillText('CPU', 10, 15);
+      }
+    });
+  }, 3000);
+
+  // Public API
   window.addWidget = (type, content = '') => createWidget(type, 50, 50, content);
 }
 
-// Initialize everything
-document.addEventListener('DOMContentLoaded', initWidgetsSystem);
+// Initialize with current user
+document.addEventListener('DOMContentLoaded', () => {
+  const currentUser = localStorage.getItem('currentUser') || 'Guest';
+  initWidgetsSystem(currentUser);
+});
 
       /* initial */
       function initialSetup(){
-        initWidgetsSystem();
+        initWidgetsSystem(currentUser);
         initTaskManager();
         createWordApp();
         createRunWindow();
