--- a/index.html
+++ b/index.html
@@ -7090,14 +7090,16 @@ function initTaskManager() {
   win.querySelector('.window-fullscreen-toggle').addEventListener('click', () => win.classList.toggle('fullscreen'));
 }
 
+
 function initWidgetsSystem(currentUser) {
+  const userKey = `widgets_${currentUser}`;
   const widgetLayer = document.getElementById('desktop-widgets-layer') || createWidgetLayer();
 
   // Load saved widgets for current user
-  const userKey = `widgets_${currentUser}`;
   const savedWidgets = JSON.parse(localStorage.getItem(userKey) || '[]');
   savedWidgets.forEach(widget => createWidget(widget.type, widget.x, widget.y, widget.content));
 
+  // === Create Widget Layer ===
   function createWidgetLayer() {
     const layer = document.createElement('div');
     layer.id = 'desktop-widgets-layer';
@@ -7108,7 +7110,7 @@ function initWidgetsSystem(currentUser) {
     return layer;
   }
 
-  // Create widget
+  // === Create Widget ===
   function createWidget(type, x = 50, y = 50, content = '') {
     const widgetEl = document.createElement('div');
     widgetEl.className = 'desktop-widget';
@@ -7149,43 +7151,17 @@ function initWidgetsSystem(currentUser) {
     closeBtn.style.border = 'none';
     closeBtn.style.cursor = 'pointer';
 
-    controls.appendChild(minimizeBtn);
-    controls.appendChild(closeBtn);
+    controls.append(minimizeBtn, closeBtn);
     header.appendChild(controls);
     widgetEl.appendChild(header);
 
     // Body
     const body = document.createElement('div');
     body.className = 'widget-body';
-
-    if (type === 'Clock') {
-      body.innerHTML = `<div id="clock-${Date.now()}">--:--</div>`;
-    } else if (type === 'Notes') {
-      body.innerHTML = `<textarea style="width:100%;height:80px;background:#111;color:#fff;border:none;border-radius:4px;">${content}</textarea>
-      <button style="margin-top:6px;width:100%;background:#ff7ad9;border:none;color:#fff;padding:4px;border-radius:4px;">Save</button>`;
-    } else if (type === 'Calendar') {
-      const now = new Date();
-      body.innerHTML = `<div><strong>${now.toDateString()}</strong></div><div style="display:grid;grid-template-columns:repeat(7,1fr);gap:4px;margin-top:6px;">${Array.from({length:30},(_,i)=>`<div>${i+1}</div>`).join('')}</div>`;
-    } else if (type === 'Calculator') {
-      body.innerHTML = `<input type="text" readonly style="width:100%;margin-bottom:6px;background:#222;color:#fff;border:none;padding:4px;border-radius:4px;">
-      <div style="display:grid;grid-template-columns:repeat(4,1fr);gap:4px;">${['7','8','9','/','4','5','6','*','1','2','3','-','0','.','=','+'].map(d=>`<button>${d}</button>`).join('')}</div>`;
-    } else if (type === 'MiniWeb') {
-      body.innerHTML = `<input type="text" placeholder="Enter URL" style="width:100%;margin-bottom:6px;background:#222;color:#fff;border:none;padding:4px;border-radius:4px;">
-      <iframe style="width:100%;height:120px;background:#fff;border:none;"></iframe>`;
-    } else if (type === 'MiniRun') {
-      body.innerHTML = `<input type="text" placeholder="Enter app name" style="width:100%;margin-bottom:6px;background:#222;color:#fff;border:none;padding:4px;border-radius:4px;">
-      <button style="width:100%;background:#ff7ad9;border:none;color:#fff;padding:4px;border-radius:4px;">Run</button>`;
-    } else if (type === 'MiniCPU') {
-      body.innerHTML = `<canvas width="200" height="80" style="background:#111;border-radius:4px;"></canvas>`;
-    } else if (type === 'Custom') {
-      body.innerHTML = `<textarea placeholder="Enter HTML" style="width:100%;height:60px;background:#111;color:#fff;border:none;border-radius:4px;"></textarea>
-      <textarea placeholder="Enter JS" style="width:100%;height:60px;background:#111;color:#fff;border:none;border-radius:4px;margin-top:6px;"></textarea>
-      <button style="margin-top:6px;width:100%;background:#ff7ad9;border:none;color:#fff;padding:4px;border-radius:4px;">Create</button>`;
-    }
-
+    body.innerHTML = getWidgetContent(type, content);
     widgetEl.appendChild(body);
-    widgetLayer.appendChild(widgetEl);
 
+    widgetLayer.appendChild(widgetEl);
     saveWidget(type, x, y, content);
 
     // Controls
@@ -7198,6 +7174,43 @@ function initWidgetsSystem(currentUser) {
     });
 
     // Dragging
+    enableDrag(widgetEl, type, content);
+  }
+
+  // === Widget Content Generator ===
+  function getWidgetContent(type, content) {
+    if (type === 'Clock') {
+      return `<div id="clock-${Date.now()}">--:--</div>`;
+    } else if (type === 'Notes') {
+      return `<textarea style="width:100%;height:80px;background:#111;color:#fff;border:none;border-radius:4px;">${content}</textarea>
+              <button style="margin-top:6px;width:100%;background:#ff7ad9;border:none;color:#fff;padding:4px;border-radius:4px;">Save</button>`;
+    } else if (type === 'Calendar') {
+      const now = new Date();
+      return `<div><strong>${now.toDateString()}</strong></div>
+              <div style="display:grid;grid-template-columns:repeat(7,1fr);gap:4px;margin-top:6px;">
+              ${Array.from({ length: 30 }, (_, i) => `<div>${i + 1}</div>`).join('')}</div>`;
+    } else if (type === 'Calculator') {
+      return `<input type="text" readonly style="width:100%;margin-bottom:6px;background:#222;color:#fff;border:none;padding:4px;border-radius:4px;">
+              <div style="display:grid;grid-template-columns:repeat(4,1fr);gap:4px;">
+              ${['7','8','9','/','4','5','6','*','1','2','3','-','0','.','=','+'].map(d => `<button>${d}</button>`).join('')}</div>`;
+    } else if (type === 'MiniWeb') {
+      return `<input type="text" placeholder="Enter URL" style="width:100%;margin-bottom:6px;background:#222;color:#fff;border:none;padding:4px;border-radius:4px;">
+              <iframe style="width:100%;height:120px;background:#fff;border:none;"></iframe>`;
+    } else if (type === 'MiniRun') {
+      return `<input type="text" placeholder="Enter app name" style="width:100%;margin-bottom:6px;background:#222;color:#fff;border:none;padding:4px;border-radius:4px;">
+              <button style="width:100%;background:#ff7ad9;border:none;color:#fff;padding:4px;border-radius:4px;">Run</button>`;
+    } else if (type === 'MiniCPU') {
+      return `<canvas width="200" height="80" style="background:#111;border-radius:4px;"></canvas>`;
+    } else if (type === 'Custom') {
+      return `<textarea placeholder="Enter HTML" style="width:100%;height:60px;background:#111;color:#fff;border:none;border-radius:4px;"></textarea>
+              <textarea placeholder="Enter JS" style="width:100%;height:60px;background:#111;color:#fff;border:none;border-radius:4px;margin-top:6px;"></textarea>
+              <button style="margin-top:6px;width:100%;background:#ff7ad9;border:none;color:#fff;padding:4px;border-radius:4px;">Create</button>`;
+    }
+    return `<div>${type} widget</div>`;
+  }
+
+  // === Dragging Logic ===
+  function enableDrag(widgetEl, type, content) {
     let isDragging = false, offsetX, offsetY;
     widgetEl.addEventListener('mousedown', e => {
       if (e.target.tagName === 'TEXTAREA' || e.target.tagName === 'INPUT') return;
@@ -7220,7 +7233,7 @@ function initWidgetsSystem(currentUser) {
     });
   }
 
-  // Save widget state
+  // === Save Widget State ===
   function saveWidget(type, x, y, content) {
     const widgets = JSON.parse(localStorage.getItem(userKey) || '[]');
     const existingIndex = widgets.findIndex(w => w.type === type && w.x === x && w.y === y);
@@ -7238,7 +7251,7 @@ function initWidgetsSystem(currentUser) {
     localStorage.setItem(userKey, JSON.stringify(widgets));
   }
 
-  // Update widgets every 3 seconds
+  // === Update Widgets Every 3 Seconds ===
   setInterval(() => {
     document.querySelectorAll('.desktop-widget').forEach(widget => {
       const type = widget.querySelector('strong').textContent;
@@ -7265,8 +7278,25 @@ function initWidgetsSystem(currentUser) {
     });
   }, 3000);
 
-  // Public API
-  window.addWidget = (type, content = '') => createWidget(type, 50, 50, content);
+  // === Internal Widget Creation UI ===
+  const addBtn = document.createElement('button');
+  addBtn.textContent = '+ Add Widget';
+  addBtn.style.position = 'fixed';
+  addBtn.style.bottom = '10px';
+  addBtn.style.right = '10px';
+  addBtn.style.zIndex = '2000';
+  addBtn.style.padding = '8px';
+  addBtn.style.background = '#4c8dff';
+  addBtn.style.color = '#fff';
+  addBtn.style.border = 'none';
+  addBtn.style.borderRadius = '6px';
+  addBtn.style.cursor = 'pointer';
+  document.body.appendChild(addBtn);
+
+  addBtn.addEventListener('click', () => {
+    const type = prompt('Enter widget type (Clock, Notes, Calendar, Calculator, MiniWeb, MiniRun, MiniCPU, Custom):');
+    if (type) createWidget(type);
+  });
 }
 
 // Initialize with current user
@@ -7274,6 +7304,7 @@ document.addEventListener('DOMContentLoaded', () => {
   const currentUser = localStorage.getItem('currentUser') || 'Guest';
   initWidgetsSystem(currentUser);
 });
+
 
       /* initial */
       function initialSetup(){
